[gd_scene load_steps=28 format=3 uid="uid://dv31ttuyw5rnf"]

[ext_resource type="Theme" uid="uid://ccsfly34nw0wv" path="res://Assets/Themes/MainMenuTheme.tres" id="1_hmyp4"]
[ext_resource type="Script" path="res://Assets/Scripts/MainMenuScript.gd" id="2_12wsh"]
[ext_resource type="Texture2D" uid="uid://c0vjr1o8m12j" path="res://FreeStylers_Logo.png" id="4_5t64u"]
[ext_resource type="Texture2D" uid="uid://ctmgnh0hs142m" path="res://Assets/Sprites/Skyboxes/53437764612_f7326c94a8_5k.jpg" id="4_i0kgx"]
[ext_resource type="Theme" uid="uid://dg651pgtwypi2" path="res://Assets/Themes/ImgButton.tres" id="4_n67yd"]
[ext_resource type="Texture2D" uid="uid://dj0dhf82rc151" path="res://Assets/Sprites/Twitter.png" id="5_60nta"]
[ext_resource type="Texture2D" uid="uid://bblikpe520su5" path="res://Assets/Sprites/Skyboxes/An-Pucan-Pub-Back-Bar-Galway-Panorama.jpg" id="5_cjclh"]
[ext_resource type="Texture2D" uid="uid://drbe1j77opppx" path="res://Assets/Sprites/GGJ_Logo.png" id="6_apn8y"]
[ext_resource type="Texture2D" uid="uid://dwt488q6ky5id" path="res://Assets/Sprites/Skyboxes/An-Pucan-Pub-Bar-Galway-Panorama-1138x547.jpg" id="6_evky2"]
[ext_resource type="Texture2D" uid="uid://bwyll6qtvjtdt" path="res://Assets/Sprites/Bluesky.png" id="6_sgjl6"]
[ext_resource type="Texture2D" uid="uid://duejc0qa0fxkg" path="res://Assets/Sprites/Skyboxes/ContactSheetHDRICow.jpg" id="7_cro03"]
[ext_resource type="Texture2D" uid="uid://drw3jni7sf11v" path="res://Assets/UI/InputPrompts/gamepad icon.png" id="8_8wogb"]
[ext_resource type="Texture2D" uid="uid://cxamk45oohixr" path="res://Assets/Sprites/Skyboxes/Hilo_360_Entrance_Inside_3-CC.jpg" id="8_b6281"]
[ext_resource type="Texture2D" uid="uid://ccolws14a0y7q" path="res://Assets/UI/InputPrompts/keyboard icon.png" id="9_v12d2"]
[ext_resource type="Texture2D" uid="uid://bd1h7vcu8vaye" path="res://Assets/UI/InputPrompts/tile_0416.png" id="10_ce6xn"]
[ext_resource type="Texture2D" uid="uid://vq52h5wcccj2" path="res://Assets/UI/InputPrompts/tile_0312.png" id="11_olrp2"]
[ext_resource type="Texture2D" uid="uid://br4bjm16k3d1p" path="res://Assets/UI/InputPrompts/tile_0120.png" id="12_p3p3s"]
[ext_resource type="Texture2D" uid="uid://bfqec3k6k34y8" path="res://Assets/UI/InputPrompts/tile_0122.png" id="13_v0bkh"]
[ext_resource type="Texture2D" uid="uid://7lksimc1oufy" path="res://Assets/UI/InputPrompts/spacebar.png" id="14_hqueg"]
[ext_resource type="Texture2D" uid="uid://cg633dxa1jkr8" path="res://LogoJuego.png" id="14_j34y1"]
[ext_resource type="AudioStream" uid="uid://ddusdd4cucbon" path="res://Assets/Sound/Music/burbujillas.wav" id="15_mw41e"]
[ext_resource type="Texture2D" uid="uid://7b1p8iv1n0nm" path="res://Assets/Sprites/Skyboxes/00304_Name_Preview_360_Panorama.jpg" id="16_eqipy"]
[ext_resource type="Script" path="res://Assets/Scripts/speen.gd" id="17_ko5s0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmw2b"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 15
border_color = Color(1, 1, 1, 1)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_up83g"]
panorama = ExtResource("16_eqipy")

[sub_resource type="Sky" id="Sky_ym7mh"]
sky_material = SubResource("PanoramaSkyMaterial_up83g")

[sub_resource type="Environment" id="Environment_wp3il"]
background_mode = 2
sky = SubResource("Sky_ym7mh")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hmyp4")
script = ExtResource("2_12wsh")
skyboxes = [ExtResource("16_eqipy"), ExtResource("4_i0kgx"), ExtResource("5_cjclh"), ExtResource("6_evky2"), ExtResource("7_cro03"), ExtResource("8_b6281")]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainButtonContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FreeStylers" type="Button" parent="MainButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7625
anchor_top = 0.8125
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_n67yd")
icon = ExtResource("4_5t64u")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Twitter" type="Button" parent="MainButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.822737
anchor_top = 0.675948
anchor_right = 0.94946
anchor_bottom = 0.80267
offset_right = -0.240005
offset_bottom = -0.240005
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("4_n67yd")
icon = ExtResource("5_60nta")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="BlueSky" type="Button" parent="MainButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.827077
anchor_top = 0.537059
anchor_right = 0.94094
anchor_bottom = 0.650775
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("4_n67yd")
icon = ExtResource("6_sgjl6")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="jam" type="Button" parent="MainButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00972222
anchor_top = 0.845833
anchor_right = 0.226722
anchor_bottom = 0.992
offset_right = -0.240005
offset_bottom = -0.240005
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("4_n67yd")
icon = ExtResource("6_apn8y")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="MainButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.336806
anchor_top = -0.0123457
anchor_right = 1.10764
anchor_bottom = 1.07562
grow_horizontal = 2
scale = Vector2(0.42, 0.42)
texture = ExtResource("14_j34y1")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="MainButtonContainer" type="VBoxContainer" parent="MainButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.281528
anchor_top = 0.415802
anchor_right = 0.718472
anchor_bottom = 0.921296
offset_left = -0.320007
offset_top = -0.440002
offset_right = 0.319946
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="play" type="Button" parent="MainButtonContainer/MainButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play - 1 PLAYER"

[node name="play2" type="Button" parent="MainButtonContainer/MainButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play - 2 PLAYERS"

[node name="tutorial" type="Button" parent="MainButtonContainer/MainButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Tutorial
"

[node name="Credits" type="Button" parent="MainButtonContainer/MainButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="credits" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177951
anchor_top = 0.128086
anchor_right = 0.822049
anchor_bottom = 0.873457
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="container" type="MarginContainer" parent="credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="credits/container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 70
alignment = 1

[node name="Label" type="Label" parent="credits/container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CREDITS
--------
GONZALO CIDONCHA - El Mesas
DAVID CZEPIEL - El Camara
ÁLVARO RAMIREZ - El Palo
IGNACIO ORY - El Bola
JOSE MARTÍN - La Burbuja
JAVIER ARIAS - El Bar"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CreditsBack" type="Button" parent="credits/container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Close"

[node name="PlayerSelection" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177951
anchor_top = 0.131173
anchor_right = 0.822049
anchor_bottom = 0.87037
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="container" type="MarginContainer" parent="PlayerSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerSelection/container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 70
alignment = 1

[node name="Label" type="Label" parent="PlayerSelection/container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CREDITS
--------
Gonzalo cidoncha - silly goofy
DAVID CZEPIEL - el becario
PABLO GROSSI - el machango
IGNACIO ORY - superviviente
JOSE MARTÍN - jose
JAVIER ARIAS - kumquat konnoisseur"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CreditsBack" type="Button" parent="PlayerSelection/container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Close"

[node name="tutorial" type="Panel" parent="."]
visible = false
layout_mode = 2
anchor_left = 0.115625
anchor_top = 0.0710938
anchor_right = 0.884375
anchor_bottom = 0.917969
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0172764
anchor_top = 0.00922509
anchor_right = 0.982724
anchor_bottom = 0.127306
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 75
text = "---------------------"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.310524
anchor_top = 0.0091112
anchor_right = 0.694444
anchor_bottom = 0.125735
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 1)
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="tutorial/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 75
text = "TUTORIAL"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HSeparator" type="VSeparator" parent="tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.478771
anchor_top = 0.162179
anchor_right = 0.483288
anchor_bottom = 0.83823
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxFlat_nmw2b")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0609756
anchor_top = 0.180402
anchor_right = 0.990289
anchor_bottom = 0.814541
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="tutorial/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="tutorial/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_8wogb")
expand_mode = 2
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="tutorial/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("9_v12d2")
expand_mode = 2
stretch_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="tutorial/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="tutorial/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 45
alignment = 1

[node name="Label" type="Label" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Move Cue Tip"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Strike (hold!)"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="tutorial/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 70
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("10_ce6xn")
expand_mode = 2
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("11_olrp2")
expand_mode = 2
stretch_mode = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="tutorial/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 45
alignment = 1

[node name="Label" type="Label" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
text = "Move Cue Tip"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
text = "Strike (hold!)"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer4" type="VBoxContainer" parent="tutorial/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("12_p3p3s")
expand_mode = 2
stretch_mode = 3

[node name="Label" type="Label" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 56
text = "/"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("13_v0bkh")
expand_mode = 2
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="tutorial/VBoxContainer/HBoxContainer2/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("14_hqueg")
expand_mode = 2
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0180668
anchor_top = 0.520267
anchor_right = 1.30826
anchor_bottom = 0.520267
offset_right = 1955.88
offset_bottom = 583.767
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.2, 0.2)
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="CreditsBack" type="Button" parent="tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0325203
anchor_top = 0.924354
anchor_right = 0.96748
anchor_bottom = 0.986162
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Close"
metadata/_edit_use_anchors_ = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_mw41e")
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wp3il")

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("17_ko5s0")
speed = -0.01

[connection signal="button_down" from="MainButtonContainer/FreeStylers" to="." method="FreeStylers"]
[connection signal="button_down" from="MainButtonContainer/Twitter" to="." method="Twitter"]
[connection signal="button_down" from="MainButtonContainer/BlueSky" to="." method="BlueSky"]
[connection signal="button_down" from="MainButtonContainer/jam" to="." method="Jam"]
[connection signal="button_down" from="MainButtonContainer/MainButtonContainer/play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="MainButtonContainer/MainButtonContainer/play2" to="." method="_on_play_2_button_down"]
[connection signal="button_down" from="MainButtonContainer/MainButtonContainer/tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="MainButtonContainer/MainButtonContainer/Credits" to="." method="_on_credits_button_down"]
[connection signal="button_down" from="credits/container/VBoxContainer/CreditsBack" to="." method="_on_credits_back_button_down"]
[connection signal="button_down" from="PlayerSelection/container/VBoxContainer/CreditsBack" to="." method="_on_credits_back_button_down"]
[connection signal="button_down" from="tutorial/CreditsBack" to="." method="_on_credits_back_button_down"]
[connection signal="button_down" from="tutorial/CreditsBack" to="." method="_on_tutorial_back_button_down"]
